# fall_recognition

./: CMakeLists.txt  README.md
demo/: demo.cpp  depwise_convolution.cpp  no_bn_demo.cpp  skip_frame_test.cpp  usb_cam_demo.cpp
include/fall_recognition/: bind_id.h  fall_recognition.h  state_judge.h  timer.hpp
no_bn/: merge_bn.py
snapshot/: depwise_convolution.prototxt
src/: bind_id.cpp  fall_recognition.cpp  state_judge.cpp
